test/conformance/chainsaw/imagevalidatingpolicies/context/globalreference/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-apicall-projections
spec:
  apiCall:
    urlPath: "/apis/apps/v1/deployments"
    refreshInterval: 1h
  projections:
    - name: test-globalcontext-apicall-correct-projections_deployment_count
      jmesPath: "items[?metadata.namespace=='test-globalcontext-apicall-correct'] | length(@)"
