test/conformance/chainsaw/imagevalidatingpolicies/context/globalreference/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apicall-correct
spec:
  steps:
  - try:
    - apply:
        file: namespace.yaml
    - apply:
        file: main-deployment.yaml
    - apply:
        file: gctxentry.yaml
    - sleep:
        duration: 3s
  - name: create policy
    try:
    - create:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - try:
    - create:
        file: new-deployment.yaml
        expect:
          - check:
              ($error): >-
                admission webhook "ivpol.validate.kyverno.svc-fail" denied the request: Policy  failed: cannot create new deployment as main-deployment already exists, variables.dcount: 1
